# hyperion

./: .gitattributes  .gitignore  .travis.yml  AutoBuildCount.h  BUILDING  CHANGES  CMakeLists.txt  CMake_FunctionChecks.txt  CMake_HeaderChecks.txt  CMake_LibraryChecks.txt  CMake_MiscChecks.txt  CMake_OSDep.txt  CODEOWNERS  COPYRIGHT  Hercules_VS2008.sln  Hercules_VS2008.vcproj  Hercules_VS2015.vcxproj  Hercules_VS2015.vcxproj.filters  Hercules_VS2017.sln  Hercules_VS2017.vcxproj  Hercules_VS2017.vcxproj.filters  Hercules_VS2019.sln  Hercules_VS2019.vcxproj  Hercules_VS2019.vcxproj.filters  Hercules_VS2022.sln  Hercules_VS2022.vcxproj  Hercules_VS2022.vcxproj.filters  INSTALL  Makefile.am  Makefile.in  README.AIX  README.APL360  README.CCKD64  README.CMPSC  README.DECNUMBER  README.ECPSVM  README.EXTPKG  README.HDL  README.HERCLOGO  README.HQA  (+380 more)
LICENSES/: crypto.LICENSE.txt  herclic.html
SoftFloat/: .gitattributes  BUILDING  BUILDING.txt  CMakeLists.txt  COPYING.txt  README.md  SoftFloat.pc.in  cflags.txt  extra.txt  headers.txt  includes.txt  platform.h.in  project.txt  softfloat_version.c  sources.txt  targetver.txt
SoftFloat/cmake/modules/: CapitalizeWord.cmake
SoftFloat/hercsource/: f128_roundToInt.c  f128_scaledResult.c  f128_to_ui64.c  f32_roundToInt.c  f32_scaledResult.c  f32_to_ui64.c  f64_roundToInt.c  f64_scaledResult.c  f64_to_ui64.c  s_addMagsF128.c  s_addMagsF32.c  s_addMagsF64.c  s_mulAddF32.c  s_mulAddF64.c  s_propagateNaNF128UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  s_roundPackToF128.c  s_roundPackToF32.c  s_roundPackToF64.c  s_roundPackToI32.c  s_roundPackToI64.c  s_roundPackToUI32.c  s_roundPackToUI64.c  softfloat_state.c
SoftFloat/include/: softfloat.h  softfloat_types.h  softfloat_version.h
SoftFloat/lib/: SoftFloat32.lib  SoftFloat32d.lib  SoftFloat64.lib  SoftFloat64d.lib
SoftFloat/lib/pkgconfig/: SoftFloat32.pc  SoftFloat64.pc
SoftFloat/source/: extF80M_add.c  extF80M_div.c  extF80M_eq.c  extF80M_eq_signaling.c  extF80M_le.c  extF80M_le_quiet.c  extF80M_lt.c  extF80M_lt_quiet.c  extF80M_mul.c  extF80M_rem.c  extF80M_roundToInt.c  extF80M_sqrt.c  extF80M_sub.c  extF80M_to_f128M.c  extF80M_to_f32.c  extF80M_to_f64.c  extF80M_to_i32.c  extF80M_to_i32_r_minMag.c  extF80M_to_i64.c  extF80M_to_i64_r_minMag.c  extF80M_to_ui32.c  extF80M_to_ui32_r_minMag.c  extF80M_to_ui64.c  extF80M_to_ui64_r_minMag.c  extF80_add.c  extF80_div.c  extF80_eq.c  extF80_eq_signaling.c  extF80_isSignalingNaN.c  extF80_le.c  extF80_le_quiet.c  extF80_lt.c  extF80_lt_quiet.c  extF80_mul.c  extF80_rem.c  extF80_roundToInt.c  extF80_sqrt.c  extF80_sub.c  extF80_to_f128.c  extF80_to_f32.c  (+233 more)
SoftFloat/source/8086/: extF80M_isSignalingNaN.c  f128M_isSignalingNaN.c  s_commonNaNToExtF80M.c  s_commonNaNToExtF80UI.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_commonNaNToF32UI.c  s_extF80MToCommonNaN.c  s_f128UIToCommonNaN.c  s_f32UIToCommonNaN.c  s_f64UIToCommonNaN.c  s_propagateNaNExtF80M.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  softfloat_raiseFlags.c
SoftFloat/source/8086-SSE/: extF80M_isSignalingNaN.c  f128M_isSignalingNaN.c  s_commonNaNToExtF80M.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_commonNaNToF64UI.c  s_extF80UIToCommonNaN.c  s_f128MToCommonNaN.c  s_f128UIToCommonNaN.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  softfloat-specialize.h  softfloat_raiseFlags.c  specialize.h
SoftFloat/source/include/: internals.h  primitiveTypes.h  primitives.h  softfloat.h  softfloat.h.preherc  softfloat_stdTypes.h
autoconf/: config.guess  (+5 more)
crypto/: BUILDING  CMakeLists.txt  Makefile.am  README.md  README.txt  cflags.txt  crypto.README.txt  crypto_version.c  dyncrypt.c  extra.txt  headers.txt  includes.txt  platform.h.in  project.txt  sources.txt
crypto/include/: crypto.h  crypto_version.h  rijndael.h  sha1.h  sha2.h  sshdes.h
crypto/lib/: crypto32.lib  crypto32d.lib  crypto64.lib  crypto64d.lib
crypto/source/: rijndael.c  sha1.c  sha2.c  sshdes.c
telnet/: BUILDING  CMakeLists.txt  LICENSE.txt  README.md  README.txt  cflags.txt  extra.txt  headers.txt  includes.txt  platform.h.in  project.txt  sources.txt  telnet.LICENSE.txt  telnet.README.txt  telnet_version.c
telnet/include/: telnet.h  telnet_version.h
telnet/lib/: telnet32.lib  telnet32d.lib  telnet64.lib  telnet64d.lib
telnet/source/: telnet.c
tests/: 1403.tst  3211.asm  3211.core  3211.list  3211.rexx  3211.tst  3330.cckd64  3380.cckd64  3390.cckd64  AP-01-basic.asm  AP-01-basic.core  AP-01-basic.list  AP-01-basic.tst  AP-02-performance.asm  AP-02-performance.core  AP-02-performance.list  AP-02-performance.tst  BEAR.txt  CBUC.asm  CBUC.core  CBUC.list  CBUC.subtst  CBUC.tst  CCW-ILS.asm  CCW-ILS.core  CCW-ILS.list  CCW-ILS.tst  CCWILS.3390-1.comp-z  CDSG.asm  CDSG.core  CDSG.list  CDSG.tst  CLCL-et-al.asm  CLCL-et-al.core  CLCL-et-al.list  CLCL-et-al.tst  CLCL.asm  CLCL.core  CLCL.list  CLCL.tst  (+636 more)
util/: CMPSC.txt  Makefile.am  Makefile.in  TMOUNT.txt  bldlvlck  cckddump.hla  cckdload.hla  voldsext.cmd
util/cckddump-cckdload/: $$README  $$RECEIV  A$BZCOMP  A$ZCOMP  B$PRLK  C$ASM  D$LKED  E$DUMP  E$LOAD
util/cckddump-cckdload/X$BZC/: BLKSRT  BZLIB  COMPRESS  CRCTABLE  DECOMPR  HUFFMAN  RANDTAB
util/cckddump-cckdload/X$BZH/: BZLIB@PR
util/cckddump-cckdload/X$BZO/: BLKSRT  BZLIB  COMPRESS  CRCTABLE  DECOMPR  HUFFMAN  RANDTAB
util/cckddump-cckdload/X$CCKDA/: CCKDDU64  CCKDDUMP  CCKDLOAD
util/cckddump-cckdload/X$CCKDL/: CCKDDU64  CCKDDUMP  CCKDLOAD
util/cckddump-cckdload/X$CCKDO/: CCKDDU64  CCKDDUMP  CCKDLOAD  COMPLIB
util/cckddump-cckdload/X$ZC/: ADLER32  CRC32  DEFLATE  EXAMPLE  GZLIB  GZREAD  GZWRITE  INFBACK  INFFAST  INFLATE  INFTREES  MINIGZIP  TREES  UNCOMPR  ZUTIL
util/cckddump-cckdload/X$ZH/: CRC32  DEFLATE  INFFIXED  INFLATE  TREES  ZCONF  ZLIB  ZUTIL
util/cckddump-cckdload/X$ZO/: ADLER32  COMPRESS  CRC32  DEFLATE  EXAMPLE  GZCLOSE  GZLIB  GZREAD  GZWRITE  INFBLOCK  INFCODES  INFLATE  INFTREES  TREES  UNCOMPR  ZUTIL
(+188 files in other folders)
